# tagainijisho

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Changelog  README  README.md  README.txt  buildconfig.pri  builddb.py  detailedview.css  detailedview.html  detailedview.js  get-3rdparty.sh  prepare-source.sh  sqlite3.c.patch  tagainijisho.appdata.xml  tagainijisho.desktop  tagainijisho.nsi  tagainijisho.pro  tagainijisho.qrc  tagainijisho.rc  updateqm.pri  uploadrelease.py  view.py
.tx/: config
doc/: AUTHORS  CMakeLists.txt  MakeScreenshots.cc  MakeScreenshots.h  index.html  install.txt  manual.txt  quickstart.txt
i18n/: AUTHORS  CMakeLists.txt  tagainijisho_ar.ts  tagainijisho_cs.ts  tagainijisho_de.ts  tagainijisho_el.ts  tagainijisho_en.ts  tagainijisho_es.ts  tagainijisho_es_AR.ts  tagainijisho_fa_IR.ts  (+23 more)
pack/: CMakeLists.txt
pack/MacOS/: DS_Store  Info.plist.in  MacOSXBundleInfo.plist.in
pack/archlinux/: PKGBUILD
pack/release/: uploadrelease.py
pack/source/: buildsourcerelease.sh
pack/ubuntu/: buildubunturelease.sh
pack/ubuntu/debian/: buildubunturelease.sh  changelog  control  copyright  dirs  docs  rules  tagainijisho-dic-de.install  tagainijisho-dic-en.install  tagainijisho-dic-es.install  tagainijisho-dic-fr.install  tagainijisho-dic-ru.install  tagainijisho.desktop  tagainijisho.install
pack/win32-cross/: Toolchain-win32.cmake  buildwin32releases.sh  qt.conf  tagainijisho.nsi
src/: CMakeLists.txt  ComponentSearchWidget.cc  config.h.cmake  src.pro  tagaini_config.h.cmake
src/core/: ASyncEntryFinder.cc  ASyncEntryFinder.h  ASyncEntryLoader.cc  ASyncEntryLoader.h  ASyncQuery.cc  ASyncQuery.h  BoostException.cc  CMakeLists.txt  Compress.cc  Compress.h  DBList.h  Database.cc  Database.h  EntriesCache.cc  EntriesCache.h  Entry.cc  Entry.h  EntryListCache.cc  EntryListCache.h  EntryListDB.cc  EntryListDB.h  EntryListModel.cc  EntryListModel.h  EntryListModelFilter.cc  EntryListModelFilter.h  EntryLoader.cc  EntryLoader.h  EntrySearcher.cc  EntrySearcher.h  EntrySearcherManager.cc  EntrySearcherManager.h  Lang.cc  Lang.h  OrderedRBDBNode.h  OrderedRBNode.h  Paths.cc  Paths.h  Plugin.cc  Plugin.h  Preferences.cc  (+20 more)
src/core/jmdict/: .JMdictPlugin.cc.kate-swp  BuildJMdictDB.cc  CMakeLists.txt  JMdictEntry.cc  JMdictEntry.h  JMdictEntryLoader.cc  JMdictEntryLoader.h  JMdictEntrySearcher.cc  JMdictEntrySearcher.h  JMdictParser.cc  JMdictParser.h  JMdictPlugin.cc  JMdictPlugin.h  extractjlptlevels.py  extractjlptlevels2.py  extractjlptlevels3.py  fr.jmf  jlpt-level1.txt  jlpt-level2.txt  jlpt-level3.txt  jlpt-level4.txt  jlpt-n1.csv  jlpt-n1.csv.src  jlpt-n2.csv  jlpt-n2.csv.src  jlpt-n3.csv  jlpt-n3.csv.src  jlpt-n4.csv  jlpt-n4.csv.src  jlpt-n5.csv  jlpt-n5.csv.src  ru.jmf  th.jmf  tr.jmf
src/core/kanjidic2/: BuildKanjiDB.cc  CMakeLists.txt  DictionaryDescriptions.cc  KanjiRadicals.cc  KanjiRadicals.h  KanjiVGParser.cc  KanjiVGParser.h  Kanjidic2Entry.cc  Kanjidic2Entry.h  Kanjidic2EntryLoader.cc  Kanjidic2EntryLoader.h  Kanjidic2EntrySearcher.cc  Kanjidic2EntrySearcher.h  Kanjidic2Parser.cc  Kanjidic2Parser.h  Kanjidic2Plugin.cc  Kanjidic2Plugin.h  fr.jmf  it.jmf  jlpt-level2.txt  jlpt-level3.txt  jlpt-level4.txt  jlpt-n1.csv  jlpt-n2.csv  jlpt-n3.csv  pl.jmf  radicals.txt  th.jmf  tr.jmf
src/core/tatoeba/: BuildTatoebaDB.cc  CMakeLists.txt  TatoebaEntry.cc  TatoebaEntry.h  TatoebaEntryLoader.cc  TatoebaEntryLoader.h  TatoebaPlugin.cc  TatoebaPlugin.h
src/core/tests/: CMakeLists.txt  ListsTests.cc  ListsTests.h  OrderedRBTreeDBTests.cc  OrderedRBTreeDBTests.h  OrderedRBTreeTests.cc  OrderedRBTreeTests.h  TStringTests.cc  TStringTests.h
src/gui/: .DetailedView.cc.kate-swp  AboutDialog.ui  AbstractHistory.h  BatchHandler.cc  BatchHandler.h  BetterSpinBox.cc  BetterSpinBox.h  BookletPrintEngine.cc  BookletPrintEngine.h  BookletPrinter.cc  BookletPrinter.h  CMakeLists.txt  ClickableAnimation.cc  ClickableAnimation.h  ClickableLabel.cc  ClickableLabel.h  DataPreferences.ui  DetailedView.cc  DetailedView.h  DetailedView2.cc  DetailedView2.h  DetailedViewPreferences.ui  EditEntryNotesDialog.cc  EditEntryNotesDialog.h  ElidedPushButton.h  EntriesPrinter.cc  EntriesPrinter.h  EntriesViewHelper.cc  EntriesViewHelper.h  EntryDelegate.cc  EntryDelegate.h  EntryDelegatePreferences.ui  EntryFormatter.cc  EntryFormatter.h  EntryListModel.cc  EntryListModel.h  EntryListView.cc  EntryListView.h  EntryListWidget.cc  EntryListWidget.h  (+102 more)
src/gui/jmdict/: CMakeLists.txt  JMdictEntryFormatter.cc  JMdictEntryFormatter.h  JMdictFilterWidget.cc  JMdictFilterWidget.h  JMdictGUIPlugin.cc  JMdictGUIPlugin.h  JMdictPreferences.cc  JMdictPreferences.h  JMdictPreferences.ui  JMdictYesNoTrainer.cc  JMdictYesNoTrainer.h  detailed_jmdict.html
src/gui/kanjidic2/: CMakeLists.txt  ComponentSearchWidget.cc  ComponentSearchWidget.h  ComponentSearchWidget.ui  KanaSelector.cc  KanaSelector.h  KanaSelector.ui  KanaTable.cc  KanaTable.h  KanaView.cc  KanaView.h  KanjiPlayer.cc  KanjiPlayer.h  KanjiPopup.cc  KanjiPopup.h  KanjiPopup.ui  KanjiRenderer.cc  KanjiRenderer.h  KanjiResultsView.cc  KanjiResultsView.h  KanjiSelector.cc  KanjiSelector.h  KanjiSelector.ui  Kanjidic2EntryFormatter.cc  Kanjidic2EntryFormatter.h  Kanjidic2FilterWidget.cc  Kanjidic2FilterWidget.h  Kanjidic2GUIPlugin.cc  Kanjidic2GUIPlugin.h  Kanjidic2Preferences.cc  Kanjidic2Preferences.h  Kanjidic2Preferences.ui  RadicalSearchWidget.ui  detailed_kanjidic2.css  detailed_kanjidic2.html
src/gui/tests/: CMakeLists.txt  TemplateFillerTests.cc  TemplateFillerTests.h
src/pack/: CMakeLists.txt
src/pack/MacOS/: DS_Store  background.xcf
src/python/: jmdict.py  jmdictentities.py  kangaroo-import.py  kanjidic2.py  kanjivg.py
src/sqlite/: CMakeLists.txt  Connection.cc  Connection.h  Error.cc  Error.h  Query.cc  Query.h  SQLite.cc  SQLite.h  _qsqlcachedresult.cc  _qsqlcachedresult_p.h  fts3_tokenizer.h  qsql_sqlite.cc  qsql_sqlite.h  sqlite.pro  sqlite3all.c  sqlite3ext.cc  sqlite3ext.h  sqlite3extapi.c  sqlite3extapi.h  sqlite3mod.c
src/sqlite/tests/: CMakeLists.txt  SQLiteTests.cc  SQLiteTests.h
(+15 files in other folders)
